Refactoriza ms-analiticas para agregar datos via HTTP en vez de SQL cross-schema
ms-analiticas hacia SQL nativo cruzando schemas (db_gestion_proyectos.*,
trabajadores, asignaciones_capacidad), lo que rompia con el esquema de una RDS
dedicada por microservicio: las queries fallaban con "Unknown database
'db_gestion_proyectos'" porque cada schema vive en una instancia RDS distinta.

Ahora ms-analiticas obtiene los datos por HTTP de los otros servicios y agrega
en memoria:
- BackendClient (RestClient) llama a ms-gestion_proyectos y ms-recursos,
  propagando el JWT entrante. URLs desde el ConfigMap.
- DTOs de deserializacion (ProyectoView, TareaView, TrabajadorView, AsignacionView).
- AnaliticasService reescrito con agregacion via streams; AnaliticasController
  recibe y propaga el header Authorization.
- Se excluye DataSourceAutoConfiguration: analiticas ya no necesita RDS.

ms-gestion_proyectos: nuevo endpoint GET /api/proyectos/tareas (listado global
de tareas) que consume analiticas para los conteos por estado/prioridad.

Tests de analiticas actualizados (mock de BackendClient, header Authorization).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>